# django-rest-framework-postgres

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/app/: settings.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_tag.py  0003_ingrient.py  0004_recipe.py  0005_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: serializers.py  serialzers.py  urls.py  views.py
app/recipe/tests/: test_ingredient_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
