[tool.poetry]
name = "django-rest-framework-tdd"
version = "0.1.0"
description = ""
authors = ["diogoduartec"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=2.1.3 <2.2.0"
djangorestframework = ">=3.9.0 <3.10.0"
flake8 = ">=3.6.0 <3.7.0"
psycopg2-binary = "==2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
